--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <img src="./images/header-bg-color.png" alt="" class="w-full" />
     </div>
 
+    <!-- navbar -->
     <nav
       class="w-full fixed px-5 lg:px-8 xl:px-[8%] py-4 flex items-center justify-between z-50"
     >
@@ -67,6 +68,54 @@
         <li><a href="#contact" onclick="closeMenu()">Contact me</a></li>
       </ul>
     </nav>
+
+    <!-- header -->
+    <div
+      class="w-11/12 max-w-3xl text-center mx-auto h-screen flex flex-col items-center justify-center gap-4"
+    >
+      <img
+        src="./images/profile.jpg"
+        alt="profile"
+        class="rounded-full w-32 h-32"
+      />
+      <h3 class="flex items-end gap-2 text-xl md:text-2xl mb-3">
+        Hi! I'm Tio Prayudha
+        <img src="./images//hand-icon.png" alt="hand icon" class="w-6" />
+      </h3>
+      <h1 class="text-3xl sm:text-6xl lg:text-[66px]">
+        Fullstack web developer based in Indonesia.
+      </h1>
+      <p class="max-w-2xl mx-auto">
+        I'm a passionate Full-Stack Developer with a knack for building dynamic
+        and scalable web applications. My tech stack includes React.js, Next.js,
+        and Express for seamless front-end and back-end development, coupled
+        with MySQL and MongoDB for robust database management. I'm always
+        exploring new technologies and love collaborating on innovative
+        projects.
+      </p>
+
+      <div class="flex flex-col sm:flex-row items-center gap-4 mt-4">
+        <a
+          href="#contact"
+          class="px-10 py-3 border rounded-full bg-gradient-to-r from-[#EF9C66] to-[#FFC700] text-white flex items-center gap-2"
+          >contact me
+          <img
+            src="./images/right-arrow-white.png"
+            alt="right arrow"
+            class="w-4"
+        /></a>
+
+        <a
+          href="./images/profile.jpg"
+          download
+          class="px-10 py-3 border rounded-full border-gray-500 flex items-center gap-2 bg-white"
+          >my resume
+          <img src="./images/download.png" alt="download" class="w-4" />
+        </a>
+      </div>
+    </div>
+
+    <!-- about me -->
 
     <script src="script.js"></script>
   </body>
