--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <img
               src="./images/circular-text.avif"
               alt="circular text"
-              class="w-full"
+              class="w-full rounded-full"
             />
             <img
               src="./images/dev-icon.png"
@@ -226,6 +226,71 @@
     </div>
 
     <!-- services -->
+    <div id="services" class="w-full px-[12%] py-10 scroll-mt-20">
+      <h4 class="text-center mb-2 text-lg">What i offer</h4>
+      <h2 class="text-center text-5xl">My services</h2>
+      <p class="text-center max-w-2xl mx-auto mt-5 mb-12">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam quod
+        ipsam placeat. Consequatur, iure iste.
+      </p>
+
+      <div class="grid grid-cols-4 gap-6 my-10">
+        <div
+          class="border border-gray-400 rounded-lg px-8 py-12 hover:shadow-[4px_4px_0_#000] cursor-pointer hover:bg-amber-100 hover:-translate-y-1 duration-500"
+        >
+          <img src="./images/web-icon.png" alt="web icon" class="w-10" />
+          <h3 class="text-lg my-4 text-gray-700">Web design</h3>
+          <p class="text-sm text-gray-600 leading-5">
+            Web development is the process of building, programming...
+          </p>
+          <a href="" class="flex items-center gap-2 text-sm mt-5"
+            >Read more
+            <img src="./images/right-arrow.png" alt="right arrow" class="w-4"
+          /></a>
+        </div>
+        <div
+          class="border border-gray-400 rounded-lg px-8 py-12 hover:shadow-[4px_4px_0_#000] cursor-pointer hover:bg-amber-100 hover:-translate-y-1 duration-500"
+        >
+          <img src="./images/web-icon.png" alt="web icon" class="w-10" />
+          <h3 class="text-lg my-4 text-gray-700">Web design</h3>
+          <p class="text-sm text-gray-600 leading-5">
+            Web development is the process of building, programming...
+          </p>
+          <a href="" class="flex items-center gap-2 text-sm mt-5"
+            >Read more
+            <img src="./images/right-arrow.png" alt="right arrow" class="w-4"
+          /></a>
+        </div>
+        <div
+          class="border border-gray-400 rounded-lg px-8 py-12 hover:shadow-[4px_4px_0_#000] cursor-pointer hover:bg-amber-100 hover:-translate-y-1 duration-500"
+        >
+          <img src="./images/web-icon.png" alt="web icon" class="w-10" />
+          <h3 class="text-lg my-4 text-gray-700">Web design</h3>
+          <p class="text-sm text-gray-600 leading-5">
+            Web development is the process of building, programming...
+          </p>
+          <a href="" class="flex items-center gap-2 text-sm mt-5"
+            >Read more
+            <img src="./images/right-arrow.png" alt="right arrow" class="w-4"
+          /></a>
+        </div>
+        <div
+          class="border border-gray-400 rounded-lg px-8 py-12 hover:shadow-[4px_4px_0_#000] cursor-pointer hover:bg-amber-100 hover:-translate-y-1 duration-500"
+        >
+          <img src="./images/web-icon.png" alt="web icon" class="w-10" />
+          <h3 class="text-lg my-4 text-gray-700">Web design</h3>
+          <p class="text-sm text-gray-600 leading-5">
+            Web development is the process of building, programming...
+          </p>
+          <a href="" class="flex items-center gap-2 text-sm mt-5"
+            >Read more
+            <img src="./images/right-arrow.png" alt="right arrow" class="w-4"
+          /></a>
+        </div>
+      </div>
+    </div>
+
+    <!-- my work -->
 
     <script src="script.js"></script>
   </body>
