--- a/index.html
+++ b/index.html
@@ -388,6 +388,36 @@
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam quod
         ipsam placeat. Consequatur, iure iste.
       </p>
+
+      <form action="" class="max-w-2xl mx-auto">
+        <div class="grid grid-cols-2 gap-6 mt-10 mb-8">
+          <input
+            type="text"
+            placeholder="Enter your name"
+            class="flex-1 p-3 outline-none border-[0.5px] border-gray-400 rounded-md bg-white"
+          />
+          <input
+            type="email"
+            placeholder="Enter your email"
+            class="flex-1 p-3 outline-none border-[0.5px] border-gray-400 rounded-md bg-white"
+          />
+        </div>
+        <textarea
+          rows="6"
+          placeholder="Enter your message"
+          class="w-full p-4 outline-none border-[0.5px] border-gray-400 rounded-md bg-white mb-6"
+        ></textarea>
+        <button
+          class="py-3 px-8 w-max flex items-center justify-between gap-2 bg-black/80 text-white rounded-full mx-auto hover:bg-black duration-500"
+        >
+          Submit Now
+          <img
+            src="./images/right-arrow-white.png"
+            alt="right arrow"
+            class="w-4"
+          />
+        </button>
+      </form>
     </div>
 
     <script src="script.js"></script>
