--- a/index.html
+++ b/index.html
@@ -420,6 +420,29 @@
       </form>
     </div>
 
+    <!-- footer -->
+    <div class="mt-20">
+      <div class="text-center">
+        <h1 class="text-3xl cursor-pointer mx-auto mr-1 font-bold mb-4">
+          Deqii <span class="text-yellow-300">.</span>
+        </h1>
+        <div class="w-max flex items-center gap-2 mx-auto">
+          <img src="./images/mail_icon.png" alt="mail_icon" class="w-6" />
+          tioprayudha04@gmail.com
+        </div>
+      </div>
+      <div
+        class="text-center sm:flex items-center justify-between border-t border-gray-400 mx-[10%] mt-12 py-6"
+      >
+        <p>©️ 2024 Tio Prayudha. All rights reserved.</p>
+        <ul class="flex items-center gap-10 justify-center mt-4 sm:mt-0">
+          <li><a href="">Github</a></li>
+          <li><a href="">LinkedIn</a></li>
+          <li><a href="">Instagram</a></li>
+        </ul>
+      </div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
